--- a/style.css
+++ b/style.css
@@ -29,3 +29,26 @@ header h1 {
   font-weight: normal;
   text-align: center;
 }
+
+.description {
+  clear: left;
+}
+
+.description img {
+  float: left;
+  margin: 0 10px 10px 0;
+}
+
+.information h1 {
+  font-size: 18px;
+  margin: 0 10px 10px 0;
+  float: left;
+}
+
+.information .type {
+  background-color: #E35A4D;
+  display: inline;
+  padding: 3px 5px;
+  font-size: 80%;
+  color: #fff;
+}
